# shadow_lib

./: .coveragerc  .flaskenv  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  wsgi.py
gunicorn_configs/: local.py  production.py
migrations/: env.py
migrations/versions/: 176b53459b65_.py  448b0f1d6ff2_initializing_database.py  88e8d6f34142_.py  a47b660843f2_added_qty_to_borrowedbook_table.py  fb2ff0d058c9_.py
shadow_lib/: app.py  config.py  decorators.py  extensions.py  jwt.py  notify.py
shadow_lib/api/: __init__.py
shadow_lib/api/resources/: __init__.py  auth.py  author.py  book.py  borrowed_book.py  customer.py  order.py  swagger.py  token.py  user.py
shadow_lib/api/schemas/: __init__.py  author.py  book.py  borrowed_book.py  custom_fields.py  customer.py  order.py  user.py
shadow_lib/api/swaggers_paths/: __init__.py  (+8 more)
shadow_lib/commands/: __init__.py  populate.py  superadmin.py
shadow_lib/commons/: __init__.py  restful_plugin.py
shadow_lib/custom_types/: __init__.py
shadow_lib/models/: __init__.py  author.py  book.py  customer.py  db.py  model_errors.py  order.py  token.py  user.py
shadow_lib/static/: swagger.json
shadow_lib/swagger/: swagger.yaml
tests/: conftest.py  test_auth.py  test_authors.py  test_book_search.py  test_books.py  test_borrowed_books.py  test_commands.py  test_customers.py  test_decorators.py  test_orders.py  test_password_actions.py  test_tokens.py  test_users.py
(+7 files in other folders)
