# See https://setuptools.pypa.io/en/latest/userguide/declarative_config.html for options

[metadata]
name = shadow_lib
description = Techincal test for shadow
long_description = file: README.md
long_description_content_type = text/markdown
url = http://changeme.com
author = edf-sf
author_email = equipe-dev@edf-sf.com
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8
include_package_data = True
zip_safe = True
setup_requires =
    setuptools_scm
